--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "antd": "^5.21.5",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "color": "^4.2.3",
     "dayjs": "^1.11.13",
     "i18next": "^23.16.4",
     "path": "^0.12.7",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.4",
+    "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.2.1",
     "react-countdown": "^2.3.6",
