--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 VITE_VERSION = 1.0.0
-VITE_APP_NAME = "Ministry Of Investment - وزارة الاستثمار"
+VITE_APP_NAME = "Professional advanced company Gulf"
 VITE_BASE_URL = "https://stage-sv253n6d4bqc7d.iknology.com:257/api/"
 VITE_LOGIN_PAGE = "/auth/login"
+VITE_SITE_URL = "https://misa.gov.sa"
 VITE_PUBLISH_YEAR = 2024
 VITE_PUBLISH_MONTH=  1
 VITE_GOOGLE_API_KEY = AIzaSyDRsMPSwC4uNPpx02EPDDOrlR1IrnfaGck
