--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VITE_VERSION = 1.0.0
 VITE_APP_NAME = "Professional advanced company Gulf"
 VITE_BASE_URL = "https://stage-sv253n6d4bqc7d.iknology.com:457/api/"
 VITE_LOGIN_PAGE = "/auth/login"
-VITE_SITE_URL = "https://misa.gov.sa"
+VITE_SITE_URL = "https://misa.iknology.com"
 VITE_PUBLISH_YEAR = 2024
 VITE_PUBLISH_MONTH=  1
 VITE_GOOGLE_API_KEY = AIzaSyDRsMPSwC4uNPpx02EPDDOrlR1IrnfaGck
